Fixed Card Component 100% Width on Mobile Viewport

--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,7 @@ small {
 
 @media (pointer: coarse) {
     .card {
-        width: 190px;
+        width: 100%;
     }
 }
 
